# gpumod

./: .gitignore  AGENTS.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.beads/: beads.db  beads.db-shm  beads.db-wal  issues.jsonl  last-touched  sync-state.json
.beads/export-state/: f2ff671243f2fab9.json
.gitea/workflows/: ci.yaml
.github/workflows/: deploy-docs.yml
docs/: ARCHITECTURE.md  PRD.md  SECURITY.md  ai-planning.md  cli.md  configuration.md  contributing.md  getting-started.md  index.md  mcp.md  presets-workflow.md  presets.md  qa.md  robots.txt
docs/architecture/: index.md
docs/benchmarks/: README.md
docs/benchmarks/20260207_nemotron_devstral/: 20260207_devstral.json  20260207_lifecycle.json  20260207_nemotron.json  20260207_nemotron_devstral_report.md
docs/benchmarks/20260214_multi_agent/: README.md
docs/design/: docker-driver.md  health-monitor.md  tui-security.md
docs/getting-started/: configuration.md  index.md
docs/guides/: mcp-workflows.md
docs/internal/: presets.md  qa.md
docs/internal/guides/: RLM_REFERENCE.md
docs/internal/qa/: 20260209_4_qa.md  20260214_multi_agent_benchmark.md
docs/internal/research/: Qwen3-Coder-Next.md  nemotron-spike.md  rlm_experiment.py  rlm_langextract.md
docs/overrides/: main.html
docs/qa/: 20260209_1_3_qa.md  20260209_5_qa.md
docs/research/: knowledge_sources.md  nemotron-spike.md  vllm-sleep-mode.md
docs/user-guide/: mcp-workflows.md  mcp.md
modes/: blank.yaml  code.yaml  finetuning.yaml  hacker.yaml  multi-agent-gpt-oss.yaml  multi-agent-qwen3-coder.yaml  multi-agent-qwen3-next.yaml  nemotron.yaml  rag.yaml  speak.yaml
presets/embedding/: bge-large.yaml  nomic-embed.yaml  vllm-embedding-code.yaml  vllm-embedding.yaml
presets/llm/: devstral-small-2.yaml  glm-code.yaml  gpt-oss-20b-multi.yaml  llama-3.1-8b.yaml  mistral-7b.yaml  nemotron-3-nano.yaml  qwen-2.5-72b-gguf.yaml  qwen3-coder-multi.yaml  qwen3-coder-next-multi.yaml  qwen3-coder-next.yaml  qwen3-coder.yaml  vllm-chat.yaml  vllm-hyde.yaml  vllm-reranker.yaml
presets/speech/: qwen3-asr.yaml  vllm-tts.yaml
scripts/: benchmark.py  benchmark_chart.py  benchmark_mode_switch.py  pre-commit-check.sh
scripts/benchmark/: multi_agent_benchmark.py
scripts/benchmark/bugs/: __init__.py  easy_pagination.py  hard_async_state.py  medium_resource_leak.py
src/gpumod/: __init__.py  __main__.py  cli.py  cli_discover.py  cli_mode.py  cli_model.py  cli_plan.py  cli_preset.py  cli_service.py  cli_simulate.py  cli_template.py  config.py  db.py  mcp_main.py  mcp_resources.py  mcp_server.py  mcp_tools.py  models.py  registry.py  simulation.py  tui.py  validation.py  visualization.py  watcher.py
src/gpumod/benchmark/: __init__.py  consistency.py  mode_switch.py
src/gpumod/discovery/: __init__.py  config_fetcher.py  content_truncator.py  docs_fetcher.py  gguf_metadata.py  hf_searcher.py  llamacpp_options.py  preset_generator.py  protocols.py  section_filter.py  system_info.py  unsloth_lister.py
src/gpumod/fetchers/: __init__.py  gguf.py  huggingface.py
src/gpumod/llm/: __init__.py  anthropic_backend.py  base.py  factory.py  ollama_backend.py  openai_backend.py  prompts.py  response_validator.py
src/gpumod/preflight/: __init__.py  base.py  model_file.py  tokenizer.py  vram_check.py
src/gpumod/rlm/: __init__.py  environment.py  orchestrator.py  prompts.py  security.py
src/gpumod/services/: base.py  health.py  lifecycle.py  manager.py  registry.py  sleep.py  systemd.py  unit_installer.py  vram.py
src/gpumod/services/drivers/: docker.py  fastapi.py  llamacpp.py  vllm.py
src/gpumod/templates/: __init__.py  engine.py  modes.py  presets.py
src/gpumod/templates/systemd/: __init__.py  fastapi.service.j2  llamacpp.service.j2  vllm.service.j2
tests/: conftest.py
tests/discovery/: conftest.py  test_cli_discover.py  test_gguf_metadata.py  test_hf_searcher.py  test_llamacpp_options.py  test_preset_generator.py  test_system_info.py  test_unsloth_lister.py
tests/e2e/: conftest.py  test_e2e_lifecycle.py
tests/integration/: conftest.py  test_config_integration.py  test_llm_integration.py  test_mcp.py  test_observability.py  test_plan_integration.py  test_security_integration.py  test_security_phase6.py  test_security_threats.py  test_simulation.py
tests/unit/: test_auto_sync.py  test_benchmark_consistency.py  test_cli_init.py  test_cli_mode.py  test_cli_model.py  test_cli_plan.py  test_cli_service.py  test_cli_simulate.py  test_cli_status.py  test_cli_template.py  test_config.py  test_config_fetcher.py  test_content_truncator.py  test_db.py  test_discovery_integration.py  test_docker_driver.py  test_docs_fetcher.py  test_fastapi_driver.py  test_gguf_fetcher.py  test_health_monitor.py  test_hf_fetcher.py  test_lifecycle.py  test_llamacpp_driver.py  test_llm_backend.py  test_manager.py  test_mcp_consult.py  test_mcp_discovery_tools.py  test_mcp_resources.py  test_mcp_server.py  test_mcp_tools.py  test_migration_modes.py  test_migration_presets.py  test_mode_loader.py  test_mode_switch_benchmark.py  test_mode_sync.py  test_model_downloader.py  test_model_registry.py  test_models.py  test_packaging.py  test_preflight.py  (+20 more)
