[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpumod"
version = "0.1.0"
description = "GPU Service Manager for ML workloads"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "aiosqlite>=0.20",
    "typer>=0.9",
    "rich>=14.0",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-aiofiles>=24.1",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.mypy]
strict = true
python_version = "3.11"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/gpumod"]

[tool.coverage.report]
fail_under = 80
