[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpumod"
version = "0.1.0"
description = "GPU Service Manager for ML workloads"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Jaigouk Kim"}]
keywords = ["gpu", "vram", "ml", "vllm", "llama-cpp", "service-manager"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "aiosqlite>=0.20,<1.0",
    "typer>=0.9,<1.0",
    "rich>=14.0,<15.0",
    "jinja2>=3.1,<4.0",
    "huggingface-hub>=1.4.1,<2.0",
    "fastmcp>=2.0,<3.0",
    "docker>=7.0,<8.0",
]

[project.scripts]
gpumod = "gpumod.cli:run_cli"

[project.urls]
Homepage = "https://github.com/jaigouk/gpumod"
Repository = "https://github.com/jaigouk/gpumod"
Issues = "https://github.com/jaigouk/gpumod/issues"

[dependency-groups]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<8.0",
    "mypy>=1.10,<2.0",
    "ruff>=0.5,<1.0",
    "types-aiofiles>=24.1,<26.0",
    "types-pyyaml>=6.0.12.20250915,<7.0",
    "types-docker>=7.0,<8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gpumod"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.mypy]
strict = true
python_version = "3.11"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow-running",
]

[tool.coverage.run]
source = ["src/gpumod"]

[tool.coverage.report]
fail_under = 80
